[gd_scene load_steps=6 format=3 uid="uid://bm7w3i5qr5sw0"]

[ext_resource type="Script" path="res://minijeu_14/GFP_game.gd" id="1_pvlhh"]
[ext_resource type="PackedScene" uid="uid://mahfyml3kfeo" path="res://minijeu_14/GFP.tscn" id="2_hv0p5"]
[ext_resource type="PackedScene" uid="uid://orwfo6t55vja" path="res://minijeu_14/bacteria.tscn" id="3_fwux5"]
[ext_resource type="PackedScene" uid="uid://bg5kij2gvdk8d" path="res://minijeu_14/obstacle.tscn" id="4_vyiwr"]
[ext_resource type="PackedScene" uid="uid://coasydelfxf46" path="res://clock.tscn" id="5_ja8lf"]

[node name="GFP_game" type="Node"]
script = ExtResource("1_pvlhh")

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870607, 0.998954, 0.983926, 1)

[node name="Timer" type="Timer" parent="."]

[node name="GFP" parent="." instance=ExtResource("2_hv0p5")]
position = Vector2(47, -142)

[node name="bacteria" parent="." instance=ExtResource("3_fwux5")]
position = Vector2(576, 540)

[node name="Obstacle" parent="." instance=ExtResource("4_vyiwr")]
visible = false
position = Vector2(63, 84)

[node name="clock" parent="." instance=ExtResource("5_ja8lf")]
visible = false

[node name="screen" type="ColorRect" parent="."]
self_modulate = Color(0.00392157, 0, 0.313726, 0.666667)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.603922, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -38.0
offset_right = 254.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0.603922, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -37.0
offset_right = 63.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start
"

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -550.0
offset_top = -209.0
offset_right = 540.0
offset_bottom = -65.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.784314, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
text = "Your bacteria need to catch the GFP (green)
Be careful, not to be catch before"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Button"]
offset_left = -442.0
offset_top = 123.0
offset_right = 613.0
offset_bottom = 267.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.784314, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
text = "directional arrows : move the bacteria"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
